# mecanum_ws_v2

./: README.md  install_deps.sh
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/attachment_interface/include/attachment_interface/: attachment_node.hpp
install/attachment_interface/lib/attachment_interface/: attachment_node
install/attachment_interface/share/attachment_interface/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/duck_operations/include/duck_operations/: duck_detector_node.hpp  plow_controller_node.hpp
install/duck_operations/lib/duck_operations/: duck_detector_node  plow_controller_node
install/duck_operations/share/duck_operations/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/mecanum_bringup/share/mecanum_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.sh  package.xml  package.zsh
install/mecanum_description/share/mecanum_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.sh  package.xml  package.zsh
install/mecanum_hardware/include/mecanum_hardware/: encoder_reader.hpp  mec_system.hpp  motor_driver.hpp  serial_manager.hpp  serial_protocol_pi.hpp
install/mecanum_hardware/share/mecanum_hardware/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  mecanum_hardware_plugin.xml  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/mecanum_localization/include/mecanum_localization/: odometry_publisher.hpp
install/mecanum_localization/lib/mecanum_localization/: initial_pose_publisher  odometry_publisher  white_line_corrector
install/mecanum_localization/share/mecanum_localization/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/mecanum_sensors/include/mecanum_sensors/: fixture_detector_node.hpp  teensy_bridge_node.hpp
install/mecanum_sensors/lib/mecanum_sensors/: fixture_detector_node  imu_node  teensy_bridge_node  tof_node
log/: latest_build
src/: install_autostart.sh
src/arduino_attachment/: attachment_firmware.ino  crank_turner.cpp  crank_turner.h  keypad_presser.cpp  keypad_presser.h
src/attachment_interface/: CMakeLists.txt
src/attachment_interface/include/attachment_interface/: attachment_node.hpp
src/attachment_interface/src/: attachment_node.cpp
src/duck_operations/: CMakeLists.txt  threshold.py
src/duck_operations/include/duck_operations/: duck_detector_node.hpp  plow_controller_node.hpp
src/duck_operations/src/: duck_detector_node.cpp  plow_controller_node.cpp
src/mecanum_bringup/: CMakeLists.txt
src/mecanum_bringup/calibration/: forward_camera.yaml
src/mecanum_bringup/config/: arena_positions.yaml  controllers.yaml  ekf.yaml  nav2_params.yaml  sensor_calibration.yaml  white_lines.yaml
src/mecanum_bringup/launch/: full_mission.launch.py  localization.launch.py  mission.launch.py  navigation.launch.py  robot.launch.py
src/mecanum_bringup/map/: arena_map.pgm  arena_map.yaml  generate_arena_map.py
src/mecanum_bringup/scripts/: camera_node.py  run_all_tests.sh  tc10_nav2.py  tc11_full_mission.py  tc12_autostart.py  tc1_teensy1_serial.py  tc2_teensy2_serial.py  tc3_imu.py  tc4_encoders.py  tc5_ekf.py  tc6_keypad.py  tc7_crank.py  tc8_plank_led.py  tc9_ir_transmit.py
src/mecanum_bringup/test_scripts/: tc7_crank.py
src/mecanum_description/: CMakeLists.txt  package.xml
src/mecanum_description/urdf/: mecanum_robot.urdf.xacro  ros2_control.xacro  sensors.xacro
src/mecanum_hardware/: CMakeLists.txt  mecanum_hardware_plugin.xml  package.xml
src/mecanum_hardware/include/mecanum_hardware/: encoder_reader.hpp  mec_system.hpp  motor_driver.hpp  serial_manager.hpp  serial_protocol_pi.hpp
src/mecanum_hardware/src/: encoder_reader.cpp  mec_system.cpp  motor_driver.cpp  serial_manager.cpp
src/mecanum_localization/: CMakeLists.txt
src/mecanum_localization/include/mecanum_localization/: odometry_publisher.hpp
src/mecanum_localization/src/: flow_odometry_node.cpp  initial_pose_publisher.cpp  odometry_publisher.cpp  white_line_corrector.cpp
src/mecanum_sensors/: CMakeLists.txt
src/mecanum_sensors/include/mecanum_sensors/: fixture_detector_node.hpp  teensy2_bridge_node.hpp  teensy_bridge_node.hpp
src/mecanum_sensors/src/: camera_node.cpp  fixture_detector_node.cpp  imu_node.cpp  teensy2_bridge_node.cpp  teensy_bridge_node.cpp
src/position_verifier/: CMakeLists.txt
src/position_verifier/include/position_verifier/: position_verifier_node.hpp
src/position_verifier/src/: position_verifier_node.cpp
src/task_manager/: CMakeLists.txt  package.xml
src/task_manager/include/task_manager/: task_manager_node.hpp
src/task_manager/src/: task_manager_node.cpp
src/teensy2_firmware/: crank_handler.cpp  crank_handler.h  ir_transmitter_handler.cpp  ir_transmitter_handler.h  keypad_handler.cpp  keypad_handler.h  line_tracker_handler.cpp  line_tracker_handler.h  rgb_sensor_handler.cpp  rgb_sensor_handler.h  teensy2_firmware.ino  ultrasonic_handler.cpp  ultrasonic_handler.h
src/teensy2_interface/: CMakeLists.txt  package.xml
src/teensy2_interface/include/teensy2_interface/: teensy2_bridge_node.hpp
src/teensy2_interface/src/: teensy2_bridge_node.cpp
src/teensy_firmware/: color_sensor_handler.cpp  encoder_handler.h  flow_handler.h  motor_handler.cpp  motor_handler.h  serial_protocol.h  start_signal_handler.cpp  start_signal_handler.h  tof_handler.cpp  tof_handler.h
src/teensy_firmware/mecanum_firmware/: color_sensor_handler.h  encoder_handler.cpp  encoder_handler.h  flow_handler.cpp  mecanum_firmware.ino  motor_handler.cpp  motor_handler.h  serial_protocol.h  start_signal_handler.cpp  start_signal_handler.h  tof_handler.cpp  tof_handler.h  ultrasonic_handler.cpp  ultrasonic_handler.h
udev_rules/: 99-mecanum-robot.rules
(+106 files in other folders)
