cmake_minimum_required(VERSION 3.8)
project(position_verifier)
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(rclcpp_action REQUIRED)
find_package(nav2_msgs REQUIRED)
find_package(std_msgs REQUIRED)
find_package(nav_msgs REQUIRED)
find_package(tf2 REQUIRED)
find_package(tf2_geometry_msgs REQUIRED)

add_executable(position_verifier_node src/position_verifier_node.cpp)
target_include_directories(position_verifier_node PUBLIC include)
ament_target_dependencies(position_verifier_node
  rclcpp rclcpp_action nav2_msgs std_msgs nav_msgs tf2 tf2_geometry_msgs)
install(TARGETS position_verifier_node DESTINATION lib/${PROJECT_NAME})
install(DIRECTORY include/ DESTINATION include)
ament_package()
