<?xml version="1.0"?>
<package format="3">
  <name>task_manager</name><version>0.1.0</version>
  <description>Top-level mission sequencer</description>
  <maintainer email="todo@todo.com">TODO</maintainer>
  <license>Apache-2.0</license>
  <depend>rclcpp</depend><depend>rclcpp_action</depend>
  <depend>nav2_msgs</depend><depend>std_msgs</depend>
  <depend>geometry_msgs</depend><depend>nav_msgs</depend>
  <depend>tf2</depend><depend>tf2_geometry_msgs</depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
