<?xml version="1.0"?>
<package format="3">
  <name>teensy2_interface</name>
  <version>0.1.0</version>
  <description>Bridge node for Teensy 2 - ultrasonics, line sensor, RGB, IR transmitter, crank DC motor</description>
  <maintainer email="todo@todo.com">Tigertronics</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
